# zdppy_orm

./: README.md  pyproject.toml
examples/: 01创建数据库.py  02添加数据.py  03查询数据.py  04更新数据.py  05删除数据.py  06联合主键.py  07join连接查询.py  08模糊查询.py  09排序查询.py  10去重和统计查询.py  11聚合查询.py  12使用连接池.py  13软删除.py  joins.py
zdppy_orm/: __init__.py  model.py  mysql_ext.py  pool.py  shortcuts.py
